# communicator

./: .gitignore  Readme.md  docker-compose.dev.yml  docker-compose.service.yml
src/communicator.service/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
src/communicator.service/api/: __init__.py  auth.py  main.py  message.py  static.py
src/communicator.service/api/system/: __init__.py  file.py  healthcheck.py
src/communicator.service/api/v1/: __init__.py  auth.py  chat.py  message.py  permission.py  role.py  user.py
src/communicator.service/app/interfaces/: __init__.py  iauth.py  ifile.py  irepository.py
src/communicator.service/app/repository/: __init__.py  auth.py  chat.py  file.py  message.py  permission.py  role.py  user.py
src/communicator.service/app/schemas/: __init__.py  auth.py  chat.py  file.py  message.py  pagination.py  permission.py  role.py  user.py
src/communicator.service/domain/: __init__.py  typing.py
src/communicator.service/domain/auth/: __init__.py  entity_auth.py
src/communicator.service/domain/events/: __init__.py  websocket.py
src/communicator.service/domain/interfaces/: irepository.py
src/communicator.service/domain/logger/: __init__.py  core.py
src/communicator.service/domain/models/: __init__.py  associative.py  chat.py  entity.py  file.py  message.py  permission.py  role.py  user.py
src/communicator.service/domain/repository/: __init__.py  base.py  count.py  create.py  delete.py  get.py  (+5 more)
src/communicator.service/infrastructure/: __init__.py  auth.py  database.py  settings.py
src/communicator.service/migrations/: env.py  script.py.mako
(+4 files in other folders)
